# TIDNaming

./: AUTHORS  BUGS  BUILT.GCC34_Linux_i386  BUILT.GCC34_Linux_x86_64  BUILT.GCC34_Solaris10_x86_64  BUILT.GCC34_Solaris8_SparcV9  BUILT.GCC41_Linux_x86_64  BUILT.GCC43_Linux_x86_64  BUILT.GCC44_Solaris10_x86_64  ChangeLog  INSTALL  Makefile  Makefile.in  OMG_SPEC  README.md  VERSION  config.status  configure  configure.in  libtool  svn-commit.tmp
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
m4/.svn/: all-wcprops  entries
source/: Makefile  Makefile.am  Makefile.in  NamingContextFileIOFactory.C  NamingContextIOFactory.C  NamingContextIOFactory.h  NamingContextImpl.C  NamingContextNullIOFactory.C  NamingContextNullIOFactory.h  NamingContextNullReader.h  NamingContextWriter.h  TIDNaming.h
source/.svn/: all-wcprops  entries
source/.svn/text-base/: BindingIteratorImpl.C.svn-base  BindingIteratorImpl.h.svn-base  NamingContextExtImpl.C.svn-base  NamingContextExtImpl.h.svn-base  NamingContextFileIOFactory.h.svn-base  NamingContextFileReader.C.svn-base  NamingContextFileReader.h.svn-base  NamingContextFileWriter.C.svn-base  NamingContextFileWriter.h.svn-base  NamingContextImpl.h.svn-base  NamingContextNullReader.C.svn-base  NamingContextNullWriter.C.svn-base  NamingContextNullWriter.h.svn-base  NamingContextReader.h.svn-base  ServantManagerNSImpl.C.svn-base  ServantManagerNSImpl.h.svn-base  ns_server.C.svn-base  start_naming_ssl.sh.svn-base
source/_legacy/: AgentImpl.C  PersistenceThreadNS.h
source/_legacy/.svn/: all-wcprops  entries
source/_legacy/.svn/text-base/: AgentImpl.h.svn-base  PersistenceThreadNS.C.svn-base
source/idl/: Makefile  Makefile.in  TIDNamingAdmin.idl
source/idl/.svn/: all-wcprops  entries
source/idl/.svn/text-base/: CosNaming.idl.svn-base  Makefile.am.svn-base  NamingInternals.idl.svn-base
test/: Echo.C  Echo.h  Makefile  Makefile.Orbacus  Makefile.TAO  Makefile.am  Makefile.in  NMUtil.h  POA_Echo.C  POA_Echo.h  Test.C  TestBindNewContext.h  TestDestroy.C  TestDestroy.h  TestList.C  TestList.h  TestNewContext.h  TestResolveContext.h  TestShell.C  TestSimple.C  TestSimple_ssl.C  start_test_ssl.sh
test/.svn/: all-wcprops  entries
test/.svn/text-base/: Echo.idl.svn-base  NMUtil.C.svn-base  TestBind.C.svn-base  TestBind.h.svn-base  TestBindContext.C.svn-base  TestBindContext.h.svn-base  TestBindNewContext.C.svn-base  TestNewContext.C.svn-base  TestResolveContext.C.svn-base  TestUnbind.C.svn-base  TestUnbind.h.svn-base
